styles.css
:root {
  --color-black: #151A1E;
  --color-red: #8e1c44;
  --color-blue: #1C448E;
  --color-lightblue: #2458b9;
  --color-white: #F0EDEE;
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Questrial', sans-serif;
  line-height: 1.5;
  color: var(--color-white);
}

p {
  color: var(--color-black);
}

nav {
  display: flex;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--color-black);
  color: inherit;
  transition: 500ms ease-out;
}

nav.scroll {
  background: var(--color-blue);
}

nav a {
  padding: 1rem;
  color: inherit;
  text-decoration: none;
}

nav a:hover {
  background: var(--color-lightblue);
  color: inherit;
}

.page-container {
  background: var(--color-white);
}

.welcome-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background: var(--color-black);
  width: 100%;
}

h1 {
  font-size: 6rem;
  color: inherit;
  font-weight: 400;
}

h2 {
  font-size: 3rem;
  color: var(--color-lightblue);
  font-weight: 400;
}

footer {
  width: 100%;
  background: var(--color-blue);
  color: var(--color-white);
  text-align: center;
  padding: 2rem 0;
  align-items: center;
  vertical-align: middle;
  display: inline-block;
}

.language-icons {
  text-align: center;
}

section#projects {
  text-align: center;
}

@media (max-width: 800px) {
  img {
    max-width: 100%;
  }

  h1 {
    text-align: center;
  }

  .projects {
    padding: 25% 0;
  }

}

.projects {
  background: var(--color-black);
}

/*Cards*/

.cards-grid {
  display: grid;
  grid-template-columns: 1fr;
}

.card-caption {
  color: var(--color-white);
}

@media (min-width: 800px) {
  .cards-grid {
    grid-template-columns: repeat(3, auto);
    grid-column-gap: 3rem;
    justify-content: center;
    padding: 3rem;
  }

  .card-container {
    background-color: transparent;
    width: 300px;
    height: 400px;
    perspective: 1000px;
  }

  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
  }

  .card-container:hover .flip-card-inner {
    transform: rotateY(180deg);
  }

  .flip-card-front,
  .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
  }

  .flip-card-back {
    background-color: var(--color-red);
    color: var(--color-white);
    transform: rotateY(180deg);
  }

  .card-caption {
    padding: 60% 0;
  }
}

